Revision 0.3.4
--------------

- License updated to vanilla BSD 2-Clause to ease package use
  (http://opensource.org/licenses/BSD-2-Clause).

Revision 0.3.3
--------------

- Tools will report pysnmp-apps package version along with pysnmp version
  being used.
- Package meta-information updated.
- Package version is now in __init__.__version__

Revision 0.3.2
--------------

- MIB path mangiling reworked
- Fix to make pysnmptrap INFORM C/L switch operational

Revision 0.3.1
--------------

- Major overhawl for Python 2.4 -- 3.2 compatibility:
  + get rid of old-style types
  + drop string module usage
  + switch to rich comparation
  + drop explicit long integer type use
  + map()/filter() replaced with list comprehension
  + apply() replaced with */**args
  + switched to use 'key' sort() callback function
  + modified not to use py3k-incompatible exception syntax
  + dictionary operations made 2K/3K compatible

Revision 0.2.11b
----------------

- Fix to ignore empty value in pysnmptranslate pretty printer

Revision 0.2.11a
----------------

- New options (-Cp -Ct -Cc) implemented for pysnmp*walk tools.
- All tools now report error OID.
- EOM condition detection adjusted to reflect modified pysnmp API.
- The pysnmptrap tool code cleaned up.
- HEX values printout improved.

Revision 0.2.10a
----------------

- Fix to SNMP Apps: pass contextEngineId and contextName from command line
  to SNMP App API.
- The missing pysnmptrap tool added to distro and fixed to make it properly
  initializing SNMPv1/v2c trap PDU from command line parameters.

Revision 0.2.9a
---------------

- UDP over IPv6 transport added.
- Fix to allow SET'ting values to MIB table instances.

Revision 0.2.8a
---------------

- API versioning mechanics retired (pysnmp_apps.v4 -> pysnmp_apps).
- Attempt to use setuptools for package management whenever available.
- The apps are now ready for py2exe processing.

Revision 0.2.7a
---------------
