@@ -3,6 +3,9 @@ Revision 0.3.4
 
 - License updated to vanilla BSD 2-Clause to ease package use
   (http://opensource.org/licenses/BSD-2-Clause).
+- Fix to config.addTargetAddr() invocation -- since pysnmp 4.2.3, reworked
+  pysnmp LCD model does not require tagging transport address to bind it 
+  with communityName. 
 
 Revision 0.3.3
 --------------
